

* Installation Changes in Emacs 29.1


* Startup Changes in Emacs 29.1


* Changes in Emacs 29.1

** Help

---
*** Jumping to function/variable source now saves mark before moving point.
Jumping to source from "*Help*" buffer moves the point when the source
buffer is already open.  Now, the old point is pushed to mark ring.


* Editing Changes in Emacs 29.1

---
** Indentation of 'cl-flet' and 'cl-labels' has changed.
These forms now indent like this:

    (cl-flet ((bla (x)
		(* x x)))
      (bla 42))

This change also affects 'cl-macrolet', 'cl-flet*' and
'cl-symbol-macrolet'.


* Changes in Specialized Modes and Packages in Emacs 29.1

** image-dired

---
*** New command for the thumbnail buffer.
The new command 'image-dired-unmark-all-marks' has been added with a
binding in the menu.


* New Modes and Packages in Emacs 29.1

+++
** New mode 'erts-mode'.
This mode is used to edit files geared towards testing actions in
Emacs buffers, like indentation and the like.  The new ert function
'ert-test-erts-file' is used to parse these files.


* Incompatible Lisp Changes in Emacs 29.1


* Lisp Changes in Emacs 29.1


* Changes in Emacs 29.1 on Non-Free Operating Systems


----------------------------------------------------------------------
This file is part of GNU Emacs.

GNU Emacs is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

GNU Emacs is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with GNU Emacs.  If not, see <https://www.gnu.org/licenses/>.


Local variables:
coding: utf-8
mode: outline
paragraph-separate: "[ 	]*$"
end: